third_party/move/move-compiler-v2/tests/checking/receiver/calls_index_errors.exp

Diagnostics:
error: undeclared receiver function `merge_non_receiver` for type `W`
   ┌─ tests/checking/receiver/calls_index_errors.move:22:9
   │
22 │         S[account].t.w.merge_non_receiver(w)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot pass `&W` to a function which expects argument of type `&mut W` (mutability mismatch)
   ┌─ tests/checking/receiver/calls_index_errors.move:26:9
   │
26 │         (&S[account].t.w).merge(w)
   │         ^^^^^^^^^^^^^^^^^

error: cannot pass `&W` to a function which expects argument of type `&mut W` (mutability mismatch)
   ┌─ tests/checking/receiver/calls_index_errors.move:30:9
   │
30 │         (&v[0].t.w).merge(w)
   │         ^^^^^^^^^^^
